--- a/src/views/signout/signout.html
+++ b/src/views/signout/signout.html
@@ -57,7 +57,7 @@
             <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
               <ul id="navbar">
                 <li>
-                  <a href="#cart" aria-current="page">
+                  <a href="/cart" aria-current="page">
                     <span class="icon">
                       <i class="fas fa-cart-shopping"></i>
                     </span>
