--- a/src/views/userinfo/userinfo.css
+++ b/src/views/userinfo/userinfo.css
@@ -1,7 +1,6 @@
-.form_container {
-    display: flex;
-justify-content: center;
-/* align-items: center; */
+.form-container {
+    justify-content: center;
+    /* align-items: center; */
 }
 
 .label {
