--- a/src/views/payment/payment.html
+++ b/src/views/payment/payment.html
@@ -119,26 +119,23 @@
                     <div class="field">
                         <label class="label">이름</label>
                         <div class="control">
-                            <input type="text" id="fullNameInput">
+                            <input type="text" id="nameInput" disabled>
                         </div>
                     </div>
                     <div class="field">
                         <label class="label">주소</label>
+                        <input type="text" id="addressInput" disabled>
                     </div>
-                    <input type="text" id="sample6_postcode" placeholder="우편번호">
-                    <input type="button" onclick="sample6_execDaumPostcode()" value="우편번호 찾기"><br>
-                    <input type="text" id="sample6_address" placeholder="주소"><br>
-                    <input type="text" id="sample6_detailAddress" placeholder="상세주소">
                     <div class="field">
                         <label class="label">전화번호</label>
                         <div class="control">
-                            <input type="text" id="phoneNumberInput" placeholder="010-1234-5678">
+                            <input type="text" id="phoneNumberInput" disabled>
                         </div>
                     </div>
                     <div class="field">
                         <label class="label">이메일</label>
                         <div class="control">
-                            <input type="text" id="emailInput">
+                            <input type="text" id="emailInput" disabled>
                         </div>
                         <!-- <div class="misspass-message hide">비밀번호가 일치하지 않습니다
                         </div> -->
