--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -100,7 +100,8 @@
 	align-items: center;
 }
 .main-product .product-item {
-	padding: 0 10px 60px;
+	cursor: pointer;
+	margin: 0 10px 60px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
