--- a/src/views/products/products.html
+++ b/src/views/products/products.html
@@ -41,10 +41,10 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <!-- 커스텀 css, js -->
-    <link rel="stylesheet" href="../ranking/ranking.css" />
-    <link rel="stylesheet" href="../css/common.css">
-    <script src="../ranking/ranking.js" type="module" defer></script>
-    <script src="../nav.js" type="module" defer></script>
+    <link rel="stylesheet" href="products.css" />
+    <link rel="stylesheet" href="../../css/common.css">
+    <script src="products.js" type="module" defer></script>
+    <script src="../../nav.js" type="module" defer></script>
   </head>
   <body>
     <!-- 헤더 -->
