장바구니 업데이트

--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -79,7 +79,7 @@
         <div  class="cart-product-box hide">
           <div class="tit-box">
             <div class="choice-all-btn checkbox-btn">
-              <input type="checkbox" id="check_all">
+              <input type="checkbox" id="check_all" checked="true">
             </div>
             <p class="product-info-cell">상품정보</p> 
             <p class="product-option-cell">옵션</p> 
