사이드 카테고리 구현

--- a/src/views/products/products.css
+++ b/src/views/products/products.css
@@ -6,7 +6,7 @@
 .categories {
 	position: fixed;
 	top: 140px;
-	left: 40px;
+	left: 0px;
 }
 .categories .m-category h1 {
 	font-weight: 600;
@@ -17,30 +17,29 @@
 	font-size: 16px;
 }
 .categories .s-category > li {
-	padding: 15px 0;
+	padding: 15px 15px;
 	border-bottom: 1px solid #e5e5e5;
 }
 .rankedproducts {
 	padding: 0 0 0 190px;
+	width: 100%;
+}
+.rankedproducts .title {
+	text-align: center;
 }
 .rankedproducts .title h1 {
 	font-weight: 400;
-	text-align: center;
 }
-/* .rankedproducts .title > ul > li {
-	font-size: 16px;
-	line-height: 1.45;
-	letter-spacing: -0.2px;
-	font-weight: 500;
-	text-align: center;
-	color: rgb(153, 153, 153);
-	margin-top: 2px;
-} */
 .rankedproducts .inputProduct {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: center;
 	align-items: center;
+}
+.rankedproducts .inputProduct #productImage {
+	cursor: pointer;
+}
+.rankedproducts .inputProduct #productDescription {
+	cursor: pointer;
 }
 .rankedproducts .product-item {
 	display: flex;
