--- a/src/views/products/products.html
+++ b/src/views/products/products.html
@@ -91,16 +91,12 @@
         <section class="categories" id="categories">
             <div class="m-category">
                 <h1>CATEGORIES</h1>
-                <ul class="s-category">
-                    <li>하위카테고리1</li>
-                    <li>하위카테고리2</li>
-                    <li>하위카테고리3</li>
+                <ul class="s-category" id="s-category">
                 </ul>
             </div>
         </section>
         <section class="rankedproducts" id="rankedproducts">
-        <div class="title">
-            <h1>CATEGORY</h1>
+        <div class="title" id="title">
         </div>
         <div class="inputProduct" id="inputProduct">
         </div>
