--- a/src/views/ranking/ranking.html
+++ b/src/views/ranking/ranking.html
@@ -86,25 +86,14 @@
         </div>
       </div>
     </header>
-
     <div class="container">
-        <section class="categories" id="categories">
-            <div class="m-category">
-                <h1>CATEGORIES</h1>
-                <ul class="s-category">
-                    <li>하위카테고리1</li>
-                    <li>하위카테고리2</li>
-                    <li>하위카테고리3</li>
-                </ul>
-            </div>
-        </section>
-        <section class="rankedproducts" id="rankedproducts">
-        <div class="title">
-            <h1>CATEGORY</h1>
-        </div>
-        <div class="inputProduct" id="inputProduct">
-        </div>
-        </section>
+      <section class="rankedproducts" id="rankedproducts">
+          <div class="title">
+              <h1>BEST</h1>
+          </div>
+          <div class="inputProduct" id="inputProduct">
+          </div>
+      </section>
     </div>
 
     <!-- 상단으로 가는 버튼 -->
