주문 페이지 구성

--- a/src/views/payment/payment.html
+++ b/src/views/payment/payment.html
@@ -71,26 +71,15 @@
     <div class="container">
       <div>
         <h3 class="title">주문상품</h3>
-      </div>
-      <div class="orderTable">
-        <div class="orderTableRowGroup">
-          <div class="orderTableTitle">
-            <div class="orderTableCell">주문번호</div>
-            <div class="orderTableCell">주문상품</div>
-            <div class="orderTableCell">옵션</div>
-            <div class="orderTableCell">가격</div>
-            <div class="orderTableCell">총 금액</div>
-          </div>
-        </div>
-        <div class="orderTableRow">
-          <!-- 예시 데이터. 실제로는 DB에서 장바구니+현재물건 가져옴 -->
-          <div class="orderTableCell" id="orderNumber">asdf1</div>
-          <div class="orderTableCell" id="orderInfo">알록달록 티셔츠</div>
-          <div class="orderTableCell" id="orderState">1</div>
-          <div class="orderTableCell" id="orderSignUp">30000</div>
-          <div class="orderTableCell" id="orderTotalPrice">30000</div>
+        <div  class="cart-product-box ">
+          <div class="tit-box">
+            <p class="product-info-cell">상품정보</p> 
+            <p class="product-option-cell">옵션</p> 
+            <p class="product-price-cell">상품금액</p>
+          </div> 
         </div>
       </div>
+      
       <div>
           <h3 class="title">주문자 정보</h3>
       </div>
