--- a/src/views/payment/payment.html
+++ b/src/views/payment/payment.html
@@ -133,19 +133,42 @@
                         </div>
                     </div>
                     <div class="field is-horizontal">
-                        <label class="label">요청사항</label>
-                        <div class="select">
-                            <select id="requestSelectBox">
-                                <option value="0">배송시 요청사항을 선택해 주세요.</option>
-                                <option value="1" class="select-option">직접 수령하겠습니다.</option>
-                                <option value="2" class="select-option">배송 전 연락바랍니다.</option>
-                                <option value="3" class="select-option">부재 시 경비실에 맡겨주세요.</option>
-                                <option value="4" class="select-option">부재 시 문 앞에 놓아주세요.</option>
-                                <option value="5" class="select-option">부재 시 택배함에 넣어주세요.</option>
-                                <option value="6" class="select-option">직접 입력</option>
-                            </select>
+                        <div class="field-label is-normal">
+                            <label class="label">요청사항</label>
+                        </div>
+                        <div class="field-body">
+                            <div class="select">
+                                <select id="requestSelectBox">
+                                    <option value="0">배송시 요청사항을 선택해 주세요.</option>
+                                    <option value="1" class="select-option">직접 수령하겠습니다.</option>
+                                    <option value="2" class="select-option">배송 전 연락바랍니다.</option>
+                                    <option value="3" class="select-option">부재 시 경비실에 맡겨주세요.</option>
+                                    <option value="4" class="select-option">부재 시 문 앞에 놓아주세요.</option>
+                                    <option value="5" class="select-option">부재 시 택배함에 넣어주세요.</option>
+                                    <option value="6" class="select-option">직접 입력</option>
+                                </select>
+                            </div>
                         </div>
                     </div>
+                    <div class="field is-horizontal custom-request" id="customRequestContainer">
+                        <div class="field-label is-normal no-label"></div>
+                        <div class="field-body">
+                          <div class="field">
+                            <p class="control">
+                            <input
+                                class="input"
+                                id="customRequest"
+                                type="text"
+                                maxlength="50"
+                                placeholder="최대 50자 입력이 가능합니다."
+                                autocomplete="on"
+                            />
+                            </p>
+                          </div>
+                        </div>
+                    </div>
+                  </div>
+                </div>
                         <!-- 주문 정보 요약 -->
                     <div class="tile is-parent tile-order-summary">
                         <div class="box order-summary">
