결제페이지 요청사항 직접입력 구현

--- a/src/views/payment/payment.html
+++ b/src/views/payment/payment.html
@@ -137,6 +137,12 @@
                                     <option value="6" class="select-option">직접 입력</option>
                                 </select>
                             </div>
+                            <div>
+                              <input type="text" id="writeOption" hidden>
+                            </div>
+                        </div>
+                        <div>
+                          <button id="writeOptionSaveButton" hidden>저장</button>
                         </div>
                     </div>
                     <div class="field is-horizontal custom-request" id="customRequestContainer">
@@ -175,7 +181,7 @@
                                 </div>
                                 <div class="info">
                                 <p>배송비</p>
-                                <p id="deliveryFee">3000</p>
+                                <p id="deliveryFee">3,000원</p>
                                 </div>
                             </div>
                             <div class="total">
