충돌사항 고침

--- a/src/views/cart/cart.css
+++ b/src/views/cart/cart.css
@@ -109,7 +109,7 @@ ul {
 .hide {
   display: none;
 }
-.null-table {
+.empty-table {
   font-size: 24px;
   display: flex;
   justify-content: center;
