--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -87,7 +87,7 @@
           </div> 
         </div>
         <div>
-          <p class="hide empty">장바구니가 비어있습니다. 제품을 장바구니에 추가해주세요.</p>
+          <p class="hide empty-table">장바구니가 비어있습니다. 제품을 장바구니에 추가해주세요.</p>
         </div>
         <div class="delete_btn hide">
           <button class="delete_all">전체 삭제</button>
