--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -56,28 +56,26 @@
           </div>
         </div>
       </nav>
-      <div class="category" id="category">
-        <div id="main-category">
-          <ul id="input-category">
-            <li><a href="/ranking" aria-current="page" class="category-page">BEST</a>
-            </li>
-          </ul>
-        </div>
-        <div id="sub-category">
-            <ul id="submenu">
-              <li>
-                <a href="/cart" aria-current="page">
-                  <span class="material-icons-outlined">
-                    shopping_cart
-                  </span>
-                </a>
-              </li>
-            </ul>
-
-          
-        </div>
-      </div>
     </header>
+    <div class="category" id="category">
+      <div id="main-category">
+        <ul id="input-category">
+          <li><a href="/ranking" aria-current="page">BEST</a>
+          </li>
+        </ul>
+      </div>
+      <div id="sub-category">
+        <ul id="submenu">
+          <li>
+            <a href="/cart" aria-current="page">
+              <span class="material-icons-outlined">
+                shopping_cart
+              </span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
 
     <!-- 제품 상세 설명 카드 -->
     <section class="section">
