--- a/src/views/ranking/ranking.html
+++ b/src/views/ranking/ranking.html
@@ -26,18 +26,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
-        integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"
-        integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- ScrollToPlugin -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollToPlugin.min.js" integrity="sha512-eI+25yMAnyrpomQoYCqvHBmY4dLfqKWPnD4j8y0E3Js+yqpF26xncL4t81M1zxC+ISYfRoCN52rN/n0q2UIBZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  
-    <!--Swiper-->
-    <link rel="stylesheet" href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css" />
-    <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <!-- 커스텀 css, js -->
@@ -64,28 +52,28 @@
           </div>
         </div>
       </nav>
-      <div class="category" id="category">
-        <div id="main-category">
-          <ul id="input-category">
-            <li><a href="/ranking" aria-current="page" class="category-page">BEST</a>
-            </li>
-          </ul>
-        </div>
-        <div id="sub-category">
-            <ul id="submenu">
-              <li>
-                <a href="/cart" aria-current="page">
-                  <span class="material-icons-outlined">
-                    shopping_cart
-                  </span>
-                </a>
-              </li>
-            </ul>
-
-          
-        </div>
-      </div>
     </header>
+    <div class="category" id="category">
+      <div id="main-category">
+        <ul id="input-category">
+          <li>
+            <a href="/ranking" aria-current="page">BEST</a>
+          </li>
+        </ul>
+      </div>
+      <div id="sub-category">
+        <ul id="submenu">
+          <li>
+            <a href="/cart" aria-current="page">
+              <span class="material-icons-outlined">
+                shopping_cart
+              </span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
     <div class="container">
       <section class="rankedproducts" id="rankedproducts">
           <div class="title">
