BEST 카테고리 current class 추가

--- a/src/views/ranking/ranking.html
+++ b/src/views/ranking/ranking.html
@@ -57,7 +57,7 @@
       <div id="main-category">
         <ul id="input-category">
           <li>
-            <a href="/ranking" aria-current="page">BEST</a>
+            <a href="/ranking" aria-current="page" class="current">BEST</a>
           </li>
         </ul>
       </div>
