--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -103,6 +103,20 @@
 						/>
 					</div>
 					<div class="failemail-message hide">이메일 형식이 맞지 않습니다.</div>
+					<button id="send-email-button">인증요청</button>
+				</div>
+
+				<div class="field">
+					<div class="control">
+						<input
+							class="input"
+							id="emailcheck"
+							type="text"
+							placeholder="인증번호를 입력해주세요."
+							autocomplete="on"
+						/>
+					</div>
+					<button id="email-check-button">인증확인</button>
 				</div>
 
 				<div class="field">
