--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -75,7 +75,7 @@
         <h1 class="title">관리자 페이지</h1>
       </div>
       <div class="menu-container">
-        <a class="menu-card" href="/admin/order">
+        <a class="menu-card" href="/admin/orderList">
           <div class="menu-body">
             <p class="title">주문조회</p>
             <p class="subtitle">전체 주문 내역을 확인, 취소할 수 있습니다.</p>
