--- a/src/views/products/products.html
+++ b/src/views/products/products.html
@@ -81,8 +81,9 @@
             </div>
         </section>
         <section class="rankedproducts" id="rankedproducts">
-        <div class="inputProduct" id="inputProduct">
-        </div>
+          <div id="currentPage"></div>
+          <div class="inputProduct" id="inputProduct">
+          </div>
         </section>
     </div>
 
