--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -26,6 +26,8 @@
 		<script src="https://accounts.google.com/gsi/client" async defer></script>
 		<!-- 카카오 OAuth -->
 		<script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+		<!-- sweetalert1 -->
+		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 		<!-- 커스텀 css, js -->
 		<link rel="stylesheet" href="register.css" />
 		<script src="register.js" type="module" defer></script>
@@ -104,19 +106,6 @@
 					</div>
 					<div class="failemail-message hide">이메일 형식이 맞지 않습니다.</div>
 					<button id="send-email-button">인증요청</button>
-				</div>
-
-				<div class="field">
-					<div class="control">
-						<input
-							class="input"
-							id="emailcheck"
-							type="text"
-							placeholder="인증번호를 입력해주세요."
-							autocomplete="on"
-						/>
-					</div>
-					<button id="email-check-button">인증확인</button>
 				</div>
 
 				<div class="field">
