--- a/src/views/productAdd/productAdd.html
+++ b/src/views/productAdd/productAdd.html
@@ -54,7 +54,53 @@
           </div>
         </div>
       </nav>
-      <main>
-        
-      </main>
+
+      <section>
+        <div class="container">
+          <div id="title">
+            <h1>제품판매</h1>
+          </div>
+          <div>
+            <form>
+              <p>제품을 판매해 보세요</p>
+              <div>
+                <label for="titleInput">제품 이름</label>
+                <input type="text" id="titleInput" placeholder="아이보리 티셔츠">
+              </div>
+              <div>
+                <label for="categorySelectBox">카테고리</label>
+                <select id="categorySelectBox">
+                  <option value>카테고리를 선택해 주세요.</option>
+                </select>
+              </div>
+              <div>
+                <label for="manufacturerInput">제조사</label>
+                <input type="text" id="manufacturerInput" placeholder="OO의류제조(주)">
+              </div>
+              <div>
+                <label for="descriptionInput">제품 설명</label>
+                <textarea type="textarea" id="descriptionInput" rows="3" placeholder="제품에 대한 설명을 적어 주세요."></textarea>
+              </div>
+              <div>
+                <label for="imageInput">제품 사진</label>
+                <input type="file" id="chooseFile" name="chooseFile" accept="image/*" onchange="loadFile(this)">
+              </div>
+              <div>
+                <label for="inventoryInput">재고 수</label>
+                <input type="number" id="inventoryInput" placeholder="10">
+              </div>
+              <div>
+                <label for="priceInput">가격</label>
+                <div>
+                  <input type="number" id="priceInput" placeholder="10000">
+                  <span>원</span>
+                </div>
+              </div>
+              <div>
+                <button id="submitButton">제품 판매하기</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
     </header>
