alert창 swal로 변경

--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -16,6 +16,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
     />
+    <!-- sweetalert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!-- 폰트 어썸: 아이콘 -->
     <script
       defer
