--- a/src/views/paymentComplete/paymentComplete.html
+++ b/src/views/paymentComplete/paymentComplete.html
@@ -22,6 +22,8 @@
     src="https://kit.fontawesome.com/7630448495.js"
     crossorigin="anonymous"
   ></script>
+  <!-- sweetalert -->
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <link rel="stylesheet" href="paymentComplete.css">
   <script src="paymentComplete.js" type="module" defer></script>
   <title>쇼핑-8팀</title>
