--- a/src/views/signout/signout.html
+++ b/src/views/signout/signout.html
@@ -27,6 +27,8 @@
     <!-- 카카오 OAuth -->
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <!-- 커스텀 css, js -->
+    <!-- sweetalert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>    
     <link rel="stylesheet" href="signout.css" />
     <script src="signout.js" type="module" defer></script>
     <title>쇼핑-데모</title>
