--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -105,6 +105,7 @@
 						/>
 					</div>
 					<div class="failemail-message hide">이메일 형식이 맞지 않습니다.</div>
+					<div class="success-message hide">이메일 인증이 완료되었습니다.</div>
 					<button id="send-email-button">인증요청</button>
 				</div>
 
