--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -81,7 +81,7 @@
             <p class="subtitle">전체 주문 내역을 확인, 취소할 수 있습니다.</p>
           </div>
         </a>
-        <a class="menu-card" href="/product/add">
+        <a class="menu-card" href="/admin/productAdd">
           <div class="menu-body">
             <p class="title">상품 등록</p>
             <p class="subtitle">
