--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -87,7 +87,7 @@
             <p class="subtitle">회원 정보를 확인, 수정할 수 있습니다.</p>
           </div>
         </a>
-        <a class="menu-card" href="/product/add">
+        <a class="menu-card" href="/admin/productAdd">
           <div class="menu-body">
             <p class="title">제품판매</p>
             <p class="subtitle">
