--- a/src/views/userinfo/userinfo.html
+++ b/src/views/userinfo/userinfo.html
@@ -24,6 +24,8 @@
     ></script>
     <title>쇼핑-데모</title>
     <link rel="icon" type="image/png" sizes="16x16" href="/elice-rabbit-favicon.png">
+    <!-- sweetalert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>  
     <!-- 스타일 파일-->
     <link rel="stylesheet" href="userinfo.css" />
     <script src="userinfo.js" type="module" defer></script>
