카테고리 수정

--- a/src/views/productAdd/productAdd.html
+++ b/src/views/productAdd/productAdd.html
@@ -72,8 +72,21 @@
                 <label for="categorySelectBox">카테고리</label>
                 <input id="Bcategory" type="text" readonly>
                 <input id="Scategory" type="text" readonly>
-                <button id="categroyButton">카테고리</button>
-              </div>
+                <button type='button' id="modal_btn">모달창아 나와랏</button>
+                <div class="black_bg"></div>
+                <div class="modal_wrap">
+                  <div class="modal_close">
+                  <a href="#">close</a>
+                </div>
+                <div>
+                  <label for="">CATEGORY</label>
+                  <select name="" id="categorySelectBox"></select>
+                  <div>
+                    <ul id="ScategoyUl">
+                    </ul>
+                  </div>
+                </div>
+                </div>
               <div>
                 <label for="manufacturerInput">제조사</label>
                 <input type="text" id="manufacturerInput" placeholder="OO의류제조(주)">
