--- a/src/views/products/products.html
+++ b/src/views/products/products.html
@@ -1,95 +1,94 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>쇼핑-n팀</title>
-    <!-- 아이콘 -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/elice-rabbit-favicon.png"
-    />
-    <!-- bulma css -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
-    />
-    <!-- 폰트 어썸: 아이콘 -->
-    <script
-      defer
-      src="https://kit.fontawesome.com/7630448495.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>쇼핑-n팀</title>
+		<!-- 아이콘 -->
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="/elice-rabbit-favicon.png"
+		/>
+		<!-- 구글폰트, 아이콘 -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
+			rel="stylesheet"
+		/>
+		<!-- IONICONS -->
+		<script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <!-- 커스텀 css, js -->
-    <link rel="stylesheet" href="products.css" />
-    <link rel="stylesheet" href="../../css/common.css">
-    <script src="products.js" type="module" defer></script>
-    <script src="../../nav.js" type="module" defer></script>
-  </head>
-  <body>
-    <!-- 헤더 -->
-    <header id="header">
-      <nav class="navbar" role="navigation" aria-label="main navigation">
-          <div class="navbar-brand">
-            <a class="navbar-item" href="/">
-              <img src="/elice-rabbit.png" width="30" height="30" />
-              <span class="has-text-link">쇼핑-n팀</span>
-            </a>
-          </div>
-          <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
-            <ul id="navbar">
-              <li>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-    <div class="category" id="category">
-      <div id="main-category">
-        <ul id="input-category">
-          <li><a href="/ranking" aria-current="page">BEST</a>
-          </li>
-        </ul>
-      </div>
-      <div id="sub-category">
-        <ul id="submenu">
-          <li>
-            <a href="/cart" aria-current="page">
-              <span class="material-icons-outlined">
-                shopping_cart
-              </span>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
+		<!-- 커스텀 css, js -->
+		<link rel="stylesheet" href="products.css" />
+		<link rel="stylesheet" href="../../css/common.css" />
+		<script src="products.js" type="module" defer></script>
+		<script src="../../nav.js" type="module" defer></script>
+	</head>
+	<body>
+		<header>
+			<div class="sub-menu">
+				<!-- 회원가입,로그인 -->
+				<ul id="navbar" class="navbar"></ul>
+			</div>
+			<div class="container">
+				<div class="headerLeft">
+					<div class="nav__toggle" id="nav-toggle">
+						<div class="sidebarBtn">
+							<ion-icon name="menu-outline"></ion-icon>
+						</div>
+						<div class="sidebarBtn hidden-Toggle">
+							<ion-icon name="close-outline"></ion-icon>
+						</div>
+						<span class="sidebar-text">Menu</span>
+					</div>
+					<div class="l-navbar" id="categoryNavbar">
+						<nav class="nav">
+							<div>
+								<div class="nav__brand">
+									<div class="nav__brand">Category</div>
+								</div>
+								<div class="nav__list" id="nav-list">
+									<div class="nav__link active">
+										<a href="/" class="nav_name">Home</a>
+									</div>
+								</div>
+							</div>
+						</nav>
+					</div>
+				</div>
+				<h1 class="logo"><a href="/">StoreStore</a></h1>
+				<div class="headerRight">
+					<!-- 장바구니 -->
+					<div id="sub-category">
+						<ul id="submenu">
+							<li>
+								<a href="/cart" aria-current="page">
+									<span class="material-icons-outlined"> shopping_cart </span>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</header>
 
-    <div class="container">
-        <section class="categories" id="categories">
-            <div class="m-category">
-                <ul class="s-category" id="s-category">
-                </ul>
-            </div>
-        </section>
-        <section class="rankedproducts" id="rankedproducts">
-          <div id="currentPage"></div>
-          <div class="inputProduct" id="inputProduct">
-          </div>
-        </section>
-    </div>
+		<section class="rankedproducts" id="rankedproducts">
+			<div id="currentPage"></div>
+			<div class="inputProduct" id="inputProduct"></div>
+		</section>
 
-    <!-- 상단으로 가는 버튼 -->
-    <div id="to-top">
-      <i class="fa-solid fa-angle-up"></i>
-    </div>
-  </body>
+		<footer>footer</footer>
+
+		<!-- 상단으로 가는 버튼 -->
+		<div id="to-top">
+			<i class="fa-solid fa-angle-up"></i>
+		</div>
+	</body>
 </html>
