카테고리 삽입,추가,수정,삭제 구현

--- a/src/views/productAdd/productAdd.html
+++ b/src/views/productAdd/productAdd.html
@@ -78,7 +78,7 @@
                   <div class="modal_close">
                   <a href="#">close</a>
                 </div>
-                <div>
+                <div class="modal-box">
                   <label for="">CATEGORY</label>
                   <select name="" id="categorySelectBox"></select>
                   <div>
@@ -87,6 +87,7 @@
                   </div>
                 </div>
                 </div>
+              </div> 
               <div>
                 <label for="manufacturerInput">제조사</label>
                 <input type="text" id="manufacturerInput" placeholder="OO의류제조(주)">
