--- a/src/views/productAdd/productAdd.css
+++ b/src/views/productAdd/productAdd.css
@@ -8,7 +8,9 @@
     margin: -250px 0 0 -250px;
     background: #eee;
     z-index: 2;
+
 }
+
 .black_bg{
     display: none;
     position: fixed;
@@ -33,4 +35,11 @@
     height: 100%;
     background:url(https://img.icons8.com/metro/26/000000/close-window.png);
     text-indent: -9999px;
+}
+.modal-box{
+    height: 500px;
+    overflow: scroll;
+}
+.hide{
+    display: none;
 }
