--- a/src/views/productAdd/productAdd.html
+++ b/src/views/productAdd/productAdd.html
@@ -32,9 +32,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"
         integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <!-- sweetalert -->
+      <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>   
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="productAdd.css" />
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="productAdd.js" type="module" defer></script>
   </head>
   <body>
